nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        command: ["/bin/bash"]
        args: ["-c", "printenv HOSTNAME > /usr/local/src/index.html && exec nginx"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx # mount nginx-conf volume to /etc/nginx
          readOnly: true
        - name: log
          mountPath: /var/log/nginx
        readinessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 5
          periodSeconds: 20
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: log
          emptyDir: {}
